<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/location_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/locationName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentStart="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/location_label" />
	
	    <TextView
	        android:id="@+id/temperature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toEndOf="@id/locationName"
	        android:text="@string/temperature_label" />
	
	    <TextView
	        android:id="@+id/humidity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toEndOf="@id/temperature"
	        android:text="@string/humidity_label" />

	</RelativeLayout>
    
    <!--android:layout_below="@id/locationName"-->

    <RelativeLayout
        android:id="@+id/details_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/location_row"
        android:orientation="horizontal" >
    
        <!--android:layout_below="@id/locationName"-->
    	<TextView
	        android:id="@+id/sunrise"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentStart="true"
	        android:layout_alignParentTop="false"
	        android:paddingStart="5dp"
	        android:paddingEnd="5dp"
	        android:text="@string/sunrise_label" />
	
	    <TextView
	        android:id="@+id/sunset"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/sunrise"
	        android:layout_alignBottom="@+id/sunrise"
	        android:layout_toEndOf="@id/sunrise"
	        android:paddingStart="5dp"
	        android:paddingEnd="5dp"
	        android:text="@string/sunset_label" />
	
	    <TextView
	        android:id="@+id/wind"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/sunset"
	        android:layout_alignBottom="@+id/sunset"
	        android:layout_toEndOf="@+id/sunset"
	        android:text="@string/wind_label" />

	</RelativeLayout>
	    
</RelativeLayout>
